[gd_scene load_steps=4 format=3 uid="uid://hfsghu734lyg"]

[ext_resource type="Script" path="res://minigames/music ritmito/Der.gd" id="1_7xd0d"]
[ext_resource type="Texture2D" uid="uid://deturhdg3ocm7" path="res://minigames/music ritmito/white-circle-free-png.webp" id="1_c0h38"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ocel2"]
radius = 80.399

[node name="Der" type="Node2D"]
script = ExtResource("1_7xd0d")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
max_contacts_reported = 100
contact_monitor = true

[node name="Sprite2D" type="Sprite2D" parent="RigidBody2D"]
scale = Vector2(0.23, 0.23)
texture = ExtResource("1_c0h38")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("CircleShape2D_ocel2")

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="body_exited" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_exited"]
[connection signal="mouse_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody2D" to="." method="_on_rigid_body_2d_mouse_exited"]
